--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
               info@devstudio.com
             </a>
           </li>
-          <li>
+          <li class="header-contacts_items">
             <a class="header-contacts_link link" href="tel:+380961111111">
               <svg class="header-contacts_icon" width="10" height="16">
                 <use href="./img/sprite.svg#icon-tel-icon"></use>
@@ -71,22 +71,22 @@
     <main>
       <section class="Portfolio section">
         <div class="container">
-          <h1 class="portfolio_hidden-title hidden">Портфолио</h1>
+          <h1 class="portfolio_title--hidden hidden">Портфолио</h1>
           <ul class="portfolio_list list">
             <li class="portfolio_item">
-              <button class="portfolio_modal-btn" type="button">Все</button>
+              <button class="portfolio_button" type="button">Все</button>
             </li>
             <li class="portfolio_item">
-              <button class="portfolio_modal-btn" type="button">Веб-сайты</button>
+              <button class="portfolio_button" type="button">Веб-сайты</button>
             </li>
             <li class="portfolio_item">
-              <button class="portfolio_modal-btn" type="button">Приложения</button>
+              <button class="portfolio_button" type="button">Приложения</button>
             </li>
             <li class="portfolio_item">
-              <button class="portfolio_modal-btn" type="button">Дизайн</button>
+              <button class="portfolio_button" type="button">Дизайн</button>
             </li>
             <li class="portfolio_item">
-              <button class="portfolio_modal-btn" type="button">Маркетинг</button>
+              <button class="portfolio_button" type="button">Маркетинг</button>
             </li>
           </ul>
           <div class="projects">
@@ -315,8 +315,8 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-      <div class="container footer_box-flex">
-        <div class="footer_left-box">
+      <div class="container footer_wrap">
+        <div class="footer_box--left">
           <a class="logo footer_logo link" lang="en" href="./index.html">
             <span class="logo_text">Web</span>Studio
           </a>
@@ -340,32 +340,32 @@
             </ul>
           </address>
         </div>
-        <div class="footer_right-box">
+        <div class="footer_box--right">
           <h3 class="footer_title">присоединяйтесь</h3>
           <ul class="social">
             <li class="social_item list">
-              <a href="" class="social_link footer_icon link">
+              <a href="" class="social_link footer--icon link">
                 <svg class="social_icons" width="20" height="20">
                   <use href="./img/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social_item list">
-              <a href="" class="social_link footer_icon link">
+              <a href="" class="social_link footer--icon link">
                 <svg class="social_icons" width="20" height="20">
                   <use href="./img/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social_item list">
-              <a href="" class="social_link footer_icon link">
+              <a href="" class="social_link footer--icon link">
                 <svg class="social_icons" width="20" height="20">
                   <use href="./img/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social_item list">
-              <a href="" class="social_link footer_icon link">
+              <a href="" class="social_link footer--icon link">
                 <svg class="social_icons" width="20" height="20">
                   <use href="./img/sprite.svg#icon-linkedin"></use>
                 </svg>
@@ -379,9 +379,9 @@
             <div class="subscribe_form">
               <div class="subscribe_box">
                 <input type="text" id="email" placeholder=" " class="subscribe_input" />
-                <label for="email" class="label-placeholder">E-mail</label>
+                <label for="email" class="placeholder">E-mail</label>
               </div>
-              <button type="submit" class="modal-btn footer-btn">
+              <button type="submit" class="modal-btn footer--btn">
                 Подписаться
                 <svg class="subscribe_icon" width="24px" height="24px">
                   <use href="./img/sprite.svg#icon-send"></use>
