--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
       <!-- Customers -->
       <section class="customers section">
         <div class="container">
-          <h2 class="customers_title">Постоянные клиенты</h2>
+          <h2 class="customers_title hidden">Постоянные клиенты</h2>
           <ul class="customers_list list">
             <li class="customers_item">
               <a href="" class="customers_link link">
